# isap-aead

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yaml
benches/: benches.rs
isap-aead-benches/: Cargo.toml
isap-aead-benches/benches/: benches.rs
src/: ascon_impl.rs  keccak_impl.rs  lib.rs
tests/: kats_test.rs
