[package]
name = "isap-aead"
description = "Pure Rust implementation of ISAP v2 with Ascon and Keccak"
version = "0.1.0"
authors = ["Sebastian Ramacher <sebastian.ramacher@ait.ac.at>"]
license = "MIT"
repository = "https://github.com/sebastinas/isap-aead"
homepage = "https://github.com/sebastinas/isap-aead"
readme = "README.md"
edition = "2021"
rust-version = "1.56"
keywords = ["AEAD", "ISAP", "encryption"]
categories = ["cryptography", "no-std"]
exclude = [".github/", ".gitignore"]

[dependencies]
aead = { version = "0.4", default-features = false }
ascon-core = { version = "0.1.1", optional = true }
keccak = { version = "0.1", optional = true }
subtle = "2"
zeroize = { version = "1.5", optional = true, default-features = false, features = [
  "derive",
] }

[dev-dependencies]
spectral = "0.6"
hex = "0.4"

[features]
default = ["zeroize", "alloc", "ascon", "keccak"]
ascon = ["ascon-core"]
std = ["aead/std", "alloc"]
alloc = ["aead/alloc"]
heapless = ["aead/heapless"]
