[package]
name = "isap-aead"
description = "Pure Rust implementation of ISAP v2 with Ascon and Keccak"
version = "0.2.0"
authors = ["Sebastian Ramacher <sebastian.ramacher@ait.ac.at>"]
license = "MIT"
repository = "https://github.com/sebastinas/isap-aead"
homepage = "https://github.com/sebastinas/isap-aead"
readme = "README.md"
edition = "2021"
rust-version = "1.60"
keywords = ["AEAD", "ISAP", "encryption"]
categories = ["cryptography", "no-std"]
exclude = [".github/", ".gitignore"]

[dependencies]
aead = { version = "0.5", default-features = false }
ascon = { version = "0.3", optional = true }
keccak = { version = "0.1", optional = true }
subtle = "2"
zeroize = { version = "1.5", optional = true, default-features = false, features = [
  "derive",
] }

[dev-dependencies]
spectral = "0.6"
hex = "0.4"
criterion = "0.4"
rand = { version = "0.8", default-features = false, features = [
  "std_rng",
  "getrandom",
] }

[features]
default = ["zeroize", "alloc", "ascon", "keccak"]
std = ["aead/std", "alloc"]
alloc = ["aead/alloc"]
heapless = ["aead/heapless"]

[[bench]]
name = "benches"
harness = false
required-features = ["default", "std"]
