[package]
name = "isap-aead"
description = "Pure Rust implementation of ISAP v2 with Ascon and Keccak"
version = "0.2.3"
authors = ["Sebastian Ramacher <sebastian.ramacher@ait.ac.at>"]
license = "MIT"
repository = "https://github.com/sebastinas/isap-aead"
homepage = "https://github.com/sebastinas/isap-aead"
readme = "README.md"
edition = "2024"
rust-version = "1.85"
keywords = ["AEAD", "ISAP", "encryption"]
categories = ["cryptography", "no-std"]
exclude = [".github/", ".gitignore"]

[dependencies]
aead = { version = "0.5", default-features = false }
ascon-core = { version = "0.5.1", optional = true, default-features = false, features = [
  "permute_1",
  "permute_6",
] }
keccak = { version = "0.1", optional = true }
subtle = "2"
zeroize = { version = "1.5", optional = true, default-features = false, features = [
  "derive",
] }

[dev-dependencies]
spectral = { version = "0.6", default-features = false }
hex = "0.4"
criterion = "0.7"
rand = { version = "0.8", default-features = false, features = [
  "std_rng",
  "getrandom",
] }

[features]
default = ["zeroize", "alloc", "ascon", "keccak"]
std = ["aead/std", "alloc"]
alloc = ["aead/alloc"]
arrayvec = ["aead/arrayvec"]
heapless = ["aead/heapless"]
stream = ["aead/stream"]
ascon = ["dep:ascon-core"]
keccak = ["dep:keccak"]
zeroize = ["dep:zeroize", "ascon-core/zeroize"]

[[bench]]
name = "benches"
harness = false
required-features = ["default", "std"]
